# iced_gemini

./: Cargo.toml  README.md
src/: main.rs
src/gemini/: client.rs  gemtext.rs  mod.rs  response.rs
src/net/: mod.rs  tofu_cert_verifier.rs  tofu_socket.rs
src/ui/: error_dialog.rs  gemini_link.rs  gemini_text.rs  gemini_tooltip.rs  input_modal.rs  mod.rs  modal.rs
