[package]
name = "iced_gemini"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
iced = "0.13.1"
log = "0.4.27"
opener = "0.8.2"
rustls = "0.23.31"
thiserror = "2.0.12"
url = "2.5.4"
webpki-roots = "1.0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
